<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardUseCompatPadding="true"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_gravity="start"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/card_heading"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/bodypump_any_level"
                android:textColor="#2196F3"
                android:textSize="20sp"
                android:textStyle="bold"
                android:autoSizeTextType="uniform"
                />

            <TextView
                android:id="@+id/card_name"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/sarah_baltzer"
                android:textColor="#2196F3"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/card_address"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/fri_in_katie_humphrey_fitness_studio"
                android:textColor="#1A1A1B"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/card_time"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/_5_30_am_6_30_am_1_hour"
                android:textColor="#161717"
                android:textSize="15sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24"
            android:layout_gravity="end|center_vertical|center_horizontal"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/open_the_card" />
    </FrameLayout>
</androidx.cardview.widget.CardView>